# claude_lesson

./: .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODE_QUALITY.md  MANUAL_SETUP.md  download_model.py  format_code.bat  format_code.sh  frontend-changes.md  list_models.py  pyproject.toml  quality_check.bat  quality_check.sh  query_flow_diagram.md  start_offline.bat  start_with_mirror.bat  test_gemini.py
.claude/: settings.local.json
.claude/commands/: implement-feature.md
backend/: ai_generator.py  app.py  config.py  rag_system.py  search_tools.py  vector_store.py
backend/tests/: .gitignore  README.md  __init__.py  conftest.py  run_tests.bat  run_tests.sh  test_api_endpoints.py  test_app_factory.py
frontend/: index.html  script.js  style.css
